--- a/EasyTestApp.csproj
+++ b/EasyTestApp.csproj
@@ -46,14 +46,110 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
+    <Compile Include="TeacherAddExam1.cs">
+      <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="TeacherAddExam1.Designer.cs">
+      <DependentUpon>TeacherAddExam1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherAddExam2.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TeacherAddExam2.Designer.cs">
+      <DependentUpon>TeacherAddExam2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherAddExamSave.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TeacherAddExamSave.Designer.cs">
+      <DependentUpon>TeacherAddExamSave.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherCalendar.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TeacherCalendar.Designer.cs">
+      <DependentUpon>TeacherCalendar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherClassManagement.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TeacherClassManagement.Designer.cs">
+      <DependentUpon>TeacherClassManagement.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherClassManangementChooseStudent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TeacherClassManangementChooseStudent.Designer.cs">
+      <DependentUpon>TeacherClassManangementChooseStudent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherClassManangementViewStudents.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TeacherClassManangementViewStudents.Designer.cs">
+      <DependentUpon>TeacherClassManangementViewStudents.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherCorrectExam.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TeacherCorrectExam.Designer.cs">
+      <DependentUpon>TeacherCorrectExam.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Teacher.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Teacher.Designer.cs">
+      <DependentUpon>Teacher.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherAddExam.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TeacherAddExam.Designer.cs">
+      <DependentUpon>TeacherAddExam.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherCorrectExamBot.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TeacherCorrectExamBot.Designer.cs">
+      <DependentUpon>TeacherCorrectExamBot.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherCorrectExamManually.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TeacherCorrectExamManually.Designer.cs">
+      <DependentUpon>TeacherCorrectExamManually.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherCreateExamTime.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TeacherCreateExamTime.Designer.cs">
+      <DependentUpon>TeacherCreateExamTime.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherStatistics.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TeacherStatistics.Designer.cs">
+      <DependentUpon>TeacherStatistics.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherStatisticsExam.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TeacherStatisticsExam.Designer.cs">
+      <DependentUpon>TeacherStatisticsExam.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherStatisticsStudent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TeacherStatisticsStudent.Designer.cs">
+      <DependentUpon>TeacherStatisticsStudent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherUserControl1.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TeacherUserControl1.Designer.cs">
+      <DependentUpon>TeacherUserControl1.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -63,6 +159,57 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Teacher.resx">
+      <DependentUpon>Teacher.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeacherAddExam.resx">
+      <DependentUpon>TeacherAddExam.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeacherAddExam1.resx">
+      <DependentUpon>TeacherAddExam1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeacherAddExam2.resx">
+      <DependentUpon>TeacherAddExam2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeacherAddExamSave.resx">
+      <DependentUpon>TeacherAddExamSave.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeacherCalendar.resx">
+      <DependentUpon>TeacherCalendar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeacherClassManagement.resx">
+      <DependentUpon>TeacherClassManagement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeacherClassManangementChooseStudent.resx">
+      <DependentUpon>TeacherClassManangementChooseStudent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeacherClassManangementViewStudents.resx">
+      <DependentUpon>TeacherClassManangementViewStudents.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeacherCorrectExam.resx">
+      <DependentUpon>TeacherCorrectExam.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeacherCorrectExamBot.resx">
+      <DependentUpon>TeacherCorrectExamBot.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeacherCorrectExamManually.resx">
+      <DependentUpon>TeacherCorrectExamManually.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeacherCreateExamTime.resx">
+      <DependentUpon>TeacherCreateExamTime.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeacherStatistics.resx">
+      <DependentUpon>TeacherStatistics.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeacherStatisticsExam.resx">
+      <DependentUpon>TeacherStatisticsExam.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeacherStatisticsStudent.resx">
+      <DependentUpon>TeacherStatisticsStudent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeacherUserControl1.resx">
+      <DependentUpon>TeacherUserControl1.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
