--- a/EasyTestApp.csproj
+++ b/EasyTestApp.csproj
@@ -94,7 +94,6 @@
     <Compile Include="TeacherCorrectExam.Designer.cs">
       <DependentUpon>TeacherCorrectExam.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Teacher.cs">
       <SubType>Form</SubType>
@@ -292,6 +291,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="TeacherUserControl1.resx">
       <DependentUpon>TeacherUserControl1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Student.resx">
       <DependentUpon>Student.cs</DependentUpon>
     </EmbeddedResource>
